cmake_minimum_required(VERSION 3.12)

project(sfm LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set (PSP_VERSION_MAJOR 1.3 CACHE STRING "PSP version")
option(USE_PYTHON "USE Python Library" OFF)
option(USE_LEMON "USE LEMMON Library" ON)
option(USE_BOOST_OPTION "USE BOOST OPTION Library" ON)
option(USE_CXX11_ABI "USE GLIB CXX11 ABI" ON)

message(${CMAKE_SYSTEM})

if(NOT USE_CXX11_ABI)
    add_definitions("-D_GLIBCXX_USE_CXX11_ABI=0")
endif()
if(USE_LEMON)
    find_package(lemon REQUIRED)
    set(USE_LEMON_LIB 1)
else()
    set(USE_LEMON_LIB 0)
endif()
add_executable(main main.cpp)
if(USE_BOOST_OPTION OR USE_PYTHON)
    set(USE_BOOST_INCLUDE 1)
    find_package(Boost REQUIRED)
    target_include_directories(main PUBLIC ${Boost_INCLUDE_DIRS})
else()
    set(USE_BOOST_INCLUDE 0)
endif()

if(WIN32)
    set(DYNAMIC_LIB_SUFFIX dll)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")    
    set(DYNAMIC_LIB_SUFFIX dylib)
else()
    set(DYNAMIC_LIB_SUFFIX so)
endif()

if(USE_BOOST_OPTION OR USE_PYTHON)
    find_package(Boost REQUIRED program_options)
    if(WIN32)
        target_link_libraries(main debug ${Boost_PROGRAM_OPTIONS_LIBRARY_DEBUG})    
        target_link_libraries(main optimized ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE})
    else()    
        target_link_libraries(main ${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE})
    endif()
endif()
if(USE_LEMON)
    target_link_libraries(main ${LEMON_LIBRARY})
endif()
configure_file (
  "${PROJECT_SOURCE_DIR}/core/config.h.in"
  "${PROJECT_BINARY_DIR}/config.h"
  )

include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_BINARY_DIR})
if(USE_LEMON)
    include_directories(${LEMON_INCLUDE_DIR})
endif()    

if(USE_PYTHON)
    find_package(Python3 COMPONENTS Interpreter Development)
    
    if("$ENV{APPVEYOR}" AND WIN32)
        set(PYTHON_EXECUTABLE C:/Python36-x64/python.exe)
        set(PYTHON_VERSION_MAJOR 3)
        set(PYTHON_VERSION_MINOR 6)
    endif()
    
    if(WIN32)
        find_package(Boost REQUIRED python${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR})
    elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        find_package(Boost REQUIRED python${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR})    
    else()
        string(FIND ${CMAKE_SYSTEM} "el" IS_ENTERPRISE_LINUX)
        if(${IS_ENTERPRISE_LINUX} STREQUAL -1) # not enterprise linux
            find_package(Boost REQUIRED python-py${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR})    
        else()
            set(BP Boost_PYTHON-PY${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}_LIBRARY_RELEASE)
            set(${BP} ${Boost_LIBRARY_DIR_RELEASE}/libboost_python3-mt.so.${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION}.${Boost_SUBMINOR_VERSION} CACHE type FILEPATH)
        endif()
    endif()
    
    add_library(psp SHARED ${PROJECT_SOURCE_DIR}/core/python/psp.cpp)
    target_include_directories(psp PUBLIC ${Python3_INCLUDE_DIRS})
    target_include_directories(psp PUBLIC ${Boost_INCLUDE_DIRS})
    
    if(WIN32)
        target_link_libraries(psp debug ${Boost_PYTHON${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}_LIBRARY_DEBUG})    
        target_link_libraries(psp optimized ${Boost_PYTHON${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}_LIBRARY_RELEASE})
    elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(psp ${Boost_PYTHON${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}_LIBRARY_RELEASE})
    else()
        target_link_libraries(psp ${Boost_PYTHON-PY${Python3_VERSION_MAJOR}${Python3_VERSION_MINOR}_LIBRARY_RELEASE})
    endif()
    if(USE_LEMON)
        if(UNIX)
            set_target_properties(psp PROPERTIES LINK_FLAGS "-fPIC")
        endif()
        target_link_libraries(psp ${LEMON_LIBRARY})
    endif()    
    # magic files to extract the release library
    
    target_link_libraries(psp ${Python3_LIBRARIES}) 
    
    if(WIN32)
      # install debug type dll
      set(DYNAMIC_LIB_SUFFIX pyd)
      add_custom_command(TARGET psp POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:psp> ${PROJECT_SOURCE_DIR}/info_cluster/psp.${DYNAMIC_LIB_SUFFIX})
    endif()
    
endif()
option(ENABLE_TESTING "Enable testing" OFF)
add_subdirectory(set)
add_subdirectory(preflow)
add_subdirectory(core)
target_link_libraries(main ic_static)
target_link_libraries(main pmf)
target_link_libraries(main set_stl)
if(USE_PYTHON)
    target_link_libraries(psp ic_static)
    target_link_libraries(psp pmf)
    target_link_libraries(psp set_stl)
endif()
if(ENABLE_TESTING)
  find_package(GTest REQUIRED)
  include(CTest)
  add_subdirectory(test)
endif()
