cmake_minimum_required(VERSION 3.5)
set(ic_lib digraph_utility.cpp io_utility.cpp pmf.cpp pmf_r.cpp dt.cpp psp_i.cpp graph/info_cluster.cpp graph/gaussian2Dcase.cpp)

add_library(ic_static ${ic_lib})
if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(ic_static PRIVATE --coverage)
    target_link_libraries(ic_static INTERFACE --coverage)
endif()
if(UNIX)
	find_package(Threads REQUIRED)
    target_link_libraries(ic_static Threads::Threads)
    SET_TARGET_PROPERTIES(ic_static PROPERTIES COMPILE_FLAGS "-fPIC")
endif()
